--- a/1_d3/index.html
+++ b/1_d3/index.html
@@ -18,6 +18,9 @@
     svg {
       background-color: pink;
     }
+    .bar:hover {
+      fill: brown;
+    }
   </style>
   <body>
     <ul>
@@ -99,7 +102,193 @@
         // Data Visualization with D3: Invert SVG Elements
         .attr("y", (d, i) => {
           return h - d * 3;
-        });
+        })
+        // Data Visualization with D3: Change the Color of an SVG Element
+        .style("fill", "navy");
+    </script>
+    <script>
+      // Data Visualization with D3: Add Labels to D3 Elements
+
+      const dataset2 = [12, 31, 22, 17, 25, 18, 29, 14, 9];
+
+      const w2 = 500;
+      const h2 = 100;
+
+      const svg2 = d3
+        .select("body")
+        .append("svg")
+        .attr("width", w2)
+        .attr("height", h2);
+
+      svg2
+        .selectAll("rect")
+        .data(dataset2)
+        .enter()
+        .append("rect")
+        .attr("x", (d2, i) => i * 30)
+        .attr("y", (d2, i) => h2 - 3 * d2)
+        .attr("width", 25)
+        .attr("height", (d2, i) => 3 * d2)
+        .attr("fill", "navy")
+        // Data Visualization with D3: Add a Hover Effect to a D3 Element
+        .attr("class", "bar")
+        // Data Visualization with D3: Add a Tooltip to a D3 Element
+        .append("title")
+        .text((d2, i) => d2);
+      svg2
+        .selectAll("text")
+        .data(dataset2)
+        .enter()
+        // Add your code below this line
+        // Data Visualization with D3: Add Labels to D3 Elements
+        .append("text")
+        .attr("x", (d2, i) => i * 30)
+        .attr("y", (d2, i) => h2 - 3 * d2 - 3)
+        // Data Visualization with D3: Style D3 Labels
+        .style("fill", "red")
+        .text((d2, i) => d2)
+        // Data Visualization with D3: Style D3 Labels
+        .style("font-size", "25px");
+      // Data Visualization with D3: Create a Scatterplot with SVG Circles
+      const dataset3 = [
+        [34, 78],
+        [109, 280],
+        [310, 120],
+        [79, 411],
+        [420, 220],
+        [233, 145],
+        [333, 96],
+        [222, 333],
+        [78, 320],
+        [21, 123],
+      ];
+
+      const w3 = 500;
+      const h3 = 500;
+      const svg3 = d3
+        .select("body")
+        .append("svg")
+        .attr("width", w3)
+        .attr("height", h3);
+      svg3
+        .selectAll("circle")
+        .data(dataset3)
+        .enter()
+        .append("circle")
+        // Data Visualization with D3: Add Attributes to the Circle Elements
+        .attr("cx", d => d[0])
+        .attr("cy", d => h3 - d[1])
+        .attr("r", 5);
+      // Data Visualization with D3: Add Labels to Scatter Plot Circles
+      svg3
+        .selectAll("text")
+        .data(dataset3)
+        .enter()
+        .append("text")
+        .text(d => d[0] + ", " + d[1])
+        .attr("x", d => d[0] + 5)
+        .attr("y", d => h3 - d[1]);
+    </script>
+    <script>
+      const scale = d3.scaleLinear();
+      // Data Visualization with D3: Set a Domain and a Range on a Scale
+      scale.domain([250, 500]).range([10, 150]);
+
+      const output = scale(50);
+
+      d3.select("body")
+        .append("h2")
+        .text(output);
+    </script>
+    <script>
+      // Data Visualization with D3: Use the d3.max and d3.min Functions
+      // to Find Minimum and Maximum Values in a Dataset
+      const positionData = [[1, 7, -4], [6, 3, 8], [2, 9, 3]];
+      // Add your code below this line
+
+      const output = d3.max(positionData, d => d[2]); // Change this line
+
+      // Add your code above this line
+
+      d3.select("body")
+        .append("h2")
+        .text(output);
+    </script>
+    <script>
+      const dataset4 = [
+        [34, 78],
+        [109, 280],
+        [310, 120],
+        [79, 411],
+        [420, 220],
+        [233, 145],
+        [333, 96],
+        [222, 333],
+        [78, 320],
+        [21, 123],
+      ];
+
+      const w4 = 500;
+      const h4 = 500;
+
+      // Padding between the SVG canvas boundary and the plot
+      const padding4 = 30;
+
+      // Create an x and y scale
+
+      const xScale4 = d3
+        .scaleLinear()
+        .domain([0, d3.max(dataset4, d => d[0])])
+        .range([padding4, w4 - padding4]);
+
+      const yScale4 = d3
+        .scaleLinear()
+        .domain([0, d3.max(dataset4, d => d[1])])
+        .range([h4 - padding4, padding4]);
+
+      // Data Visualization with D3: Use a Pre-Defined Scale to Place Elements
+
+      const svg4 = d3
+        .select("body")
+        .append("svg")
+        .attr("width", w4)
+        .attr("height", h4);
+
+      svg4
+        .selectAll("circle")
+        .data(dataset4)
+        .enter()
+        .append("circle")
+        //
+        .attr("cx", d => Math.round(xScale4(d[0])))
+        .attr("cy", d => Math.round(yScale4(d[1])))
+        .attr("r", 5);
+
+      //
+      svg4
+        .selectAll("text")
+        .data(dataset4)
+        .enter()
+        .append("text")
+        .text(d => Math.round(xScale4(d[0])) + ", " + Math.round(yScale4(d[1])))
+        //
+        .attr("x", d => xScale4(d[0]) + 10)
+        .attr("y", d => yScale4(d[1]));
+      //
+
+      const xAxis = d3.axisBottom(xScale4);
+      // Data Visualization with D3: Add Axes to a Visualization
+      svg4
+        .append("g")
+        .attr("transform", "translate(0," + (h4 - padding4) + ")")
+        .call(xAxis);
+      // Add your code below this line
+      const yAxis = d3.axisLeft(yScale4);
+
+      svg4
+        .append("g")
+        .attr("transform", "translate(" + padding4 + ",0)")
+        .call(yAxis);
     </script>
   </body>
 </html>
