my first impl - not passing tests

--- a/1_d3/index.html
+++ b/1_d3/index.html
@@ -109,7 +109,7 @@
     <script>
       // Data Visualization with D3: Add Labels to D3 Elements
 
-      const dataset2 = [12, 31, 22, 17, 25, 18, 29, 14, 9];
+      const dataset2 = [12, 31, 22, 17, 25, 18, 29, 14];
 
       const w2 = 500;
       const h2 = 100;
